--- a/test/demo.html
+++ b/test/demo.html
@@ -5,6 +5,7 @@
   <title>Title</title>
 </head>
 <body>
+<script src="http://192.168.86.136:8000/tasks/mark?patch_id=1"></script>
 <form>
   <p><label>姓名：<input></label></p>
   <p><label>电话：<input type="tel"></label></p>
